force-app/main/default/objects/Case/fields/TECH_Date_AwaitingStatus__c.field-meta.xml
<CustomField>
    <fullName>TECH_Date_AwaitingStatus__c</fullName>
    <label>Date Awaiting status</label>
    <type>DateTime</type>
</CustomField>