force-app/main/default/objects/Case/fields/TECH_DreamFlag__c.field-meta.xml
<CustomField>
    <fullName>TECH_DreamFlag__c</fullName>
    <defaultValue>true</defaultValue>
    <description>[ICONiCS] checkbox to send the Case to Dream system
Any change on the Case record should update this field to true
By default, the value must be true</description>
    <label>Dream Flag</label>
    <type>Checkbox</type>
</CustomField>