force-app/main/default/objects/Case/fields/TECH_Dynamic_Case_Link__c.field-meta.xml
<CustomField>
    <fullName>TECH_Dynamic_Case_Link__c</fullName>
    <description>Store the URL of the organization</description>
    <formula>LEFT($Api.Partner_Server_URL_260, FIND( &apos;/services&apos;, $Api.Partner_Server_URL_260)) &amp; Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>TECH Dynamic Case Link</label>
    <type>Text</type>
</CustomField>