force-app/main/default/objects/Case/fields/TECH_Is_Queue_owner__c.field-meta.xml
<CustomField>
    <fullName>TECH_Is_Queue_owner__c</fullName>
    <formula>BEGINS(OwnerId, &quot;00G&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>TECH Is Queue owner</label>
    <type>Checkbox</type>
</CustomField>