force-app/main/default/objects/Case/fields/TECH_IsUser_Approval_Submitter__c.field-meta.xml
<CustomField>
    <fullName>TECH_IsUser_Approval_Submitter__c</fullName>
    <formula>Assigned_To_Escalation__r.Id = $User.Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>TECH_IsUser_Approval_Submitter</label>
    <type>Checkbox</type>
</CustomField>