force-app/main/default/objects/Case/fields/TECH_NewEmailReceived__c.field-meta.xml
<CustomField>
    <fullName>TECH_NewEmailReceived__c</fullName>
    <defaultValue>false</defaultValue>
    <label>New Email Received</label>
    <type>Checkbox</type>
</CustomField>