force-app/main/default/objects/Case/fields/TECH_Owner_is_Active_User__c.field-meta.xml
<CustomField>
    <fullName>TECH_Owner_is_Active_User__c</fullName>
    <description>Checkbox that displays if a Request owner is an active user. Used in some reports. Hidden field for all profiles except Admin</description>
    <formula>Owner:User.IsActive</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>TECH Owner is Active User</label>
    <type>Checkbox</type>
</CustomField>