force-app/main/default/objects/Case/fields/TECH_Owner_isStore__c.field-meta.xml
<CustomField>
    <fullName>TECH_Owner_isStore__c</fullName>
    <description>Check if the owner of the request is a Store User</description>
    <formula>BEGINS( Owner:User.Username ,&quot;store_&quot;)</formula>
    <label>TECH_Owner_isStore</label>
    <type>Checkbox</type>
</CustomField>