force-app/main/default/objects/Case/fields/Tech_Qualif_Not_Completed__c.field-meta.xml
<CustomField>
    <fullName>Tech_Qualif_Not_Completed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Boolean variable that inducates if main flow treminated</description>
    <label>Tech_Qualif_Not_Completed</label>
    <type>Checkbox</type>
</CustomField>