force-app/main/default/objects/Case/fields/TECH_Queue__c.field-meta.xml
<CustomField>
    <fullName>TECH_Queue__c</fullName>
    <description>Record the name of the queue owner</description>
    <label>TECH Queue</label>
    <length>100</length>
    <type>Text</type>
</CustomField>