force-app/main/default/objects/Case/fields/TECH_Queue_ID__c.field-meta.xml
<CustomField>
    <fullName>TECH_Queue_ID__c</fullName>
    <description>Process builder Cases Stage complete this field</description>
    <externalId>true</externalId>
    <label>TECH Queue ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>