force-app/main/default/objects/Case/fields/TECH_User_Store_Correlation__c.field-meta.xml
<CustomField>
    <fullName>TECH_User_Store_Correlation__c</fullName>
    <formula>$User.TECH_User_Stores__c == Store__r.RetailStoreId__c</formula>
    <label>TECH User Store Correlation</label>
    <type>Checkbox</type>
</CustomField>