force-app/main/default/objects/Case/fields/TECH_WH_Case_Team__c.field-meta.xml
<CustomField>
    <fullName>TECH_WH_Case_Team__c</fullName>
    <description>Used for reporting on Exception manager record type cases</description>
    <label>TECH WH Case Team</label>
    <length>100</length>
    <type>Text</type>
</CustomField>