force-app/main/default/objects/Case/fields/TECHLastOEStatusChangeDate__c.field-meta.xml
<CustomField>
    <fullName>TECHLastOEStatusChangeDate__c</fullName>
    <description>&quot;Last OE Status Change Date&quot; should be updated each time the OE status changes.</description>
    <label>Last OE Status Change Date</label>
    <type>DateTime</type>
</CustomField>