force-app/main/default/objects/Case/fields/technical_last_comment_date__c.field-meta.xml
<CustomField>
    <fullName>technical_last_comment_date__c</fullName>
    <label>Last Comment Date</label>
    <type>DateTime</type>
</CustomField>