force-app/main/default/objects/Case/fields/Time_to_treat_request__c.field-meta.xml
<CustomField>
    <fullName>Time_to_treat_request__c</fullName>
    <formula>ClosedDate - CreatedDate</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Time to close request</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>