force-app/main/default/objects/Case/fields/Transaction_Id__c.field-meta.xml
<CustomField>
    <fullName>Transaction_Id__c</fullName>
    <label>Distant Order</label>
    <length>100</length>
    <type>Text</type>
</CustomField>