force-app/main/default/objects/Case/fields/Type_of_Support_Escalation__c.field-meta.xml
<CustomField>
    <fullName>Type_of_Support_Escalation__c</fullName>
    <inlineHelpText>1/ Advice: Any question answered by Escalation Team to client advisor. Advisor keeps the lead to reply​. 

2/ Investigation: Any question addressed to Escalation Team that requires a third party&apos;s answer (ex: Back office, repair team, stores..)​ Advisor keeps the lead to reply.​ 

3/ Handover: Any very difficult situation that requires Escalation team to take the lead (by call or email) to de-escalate or assist further the client​.</inlineHelpText>
    <label>Type of Support</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Advice</fullName>
            </value>
            <value>
                <fullName>Investigation</fullName>
            </value>
            <value>
                <fullName>Handover</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>