force-app/main/default/objects/Case/fields/Unread_email__c.field-meta.xml
<CustomField>
    <fullName>Unread_email__c</fullName>
    <formula>IF ( TECH_NewEmailReceived__c ,IMAGE(&quot;/resource/iconics/images/emailicon.PNG&quot;, &quot;emailIcon&quot;,30,30), &quot; &quot;)</formula>
    <label>Unread email</label>
    <type>Text</type>
</CustomField>