force-app/main/default/objects/Case/fields/Urgency__c.field-meta.xml
<CustomField>
    <fullName>Urgency__c</fullName>
    <formula>IF( ISPICKVAL(Status, &apos;Interested&apos;), &quot;&quot;,
IF( ISPICKVAL(Status, &apos;Not Interested&apos;), &quot;&quot;,
IF( ISPICKVAL(Status, &apos;pending&apos;), &quot;&quot;,
IF( Request_Age__c &lt; 1, &quot;Low&quot;, 
IF(Request_Age__c &lt; 2,&quot;Medium&quot;,
&quot;High&quot;)))))</formula>
    <inlineHelpText>Low= Request age &lt;24h / Medium=Request Age = 24h / High= Request age &gt; = 48h
Status pending  =&gt; No urgency</inlineHelpText>
    <label>Urgency</label>
    <type>Text</type>
</CustomField>