force-app/main/default/objects/Case/fields/Zone_country__c.field-meta.xml
<CustomField>
    <fullName>Zone_country__c</fullName>
    <formula>IF (Text (Country__c)=&quot;&quot;,&quot;INTERNATIONAL&quot;, 
  IF(CONTAINS(&quot;CUBA,CANADA,USA,BRAZIL,ARGENTINA,COLOMBIA,CHILE,MEXICO&quot;, Text( Country__c  )), &quot;AMERICAS&quot;,
    IF(CONTAINS(&quot;FRANCE, BELGIUM, LUXEMBOURG, UKRAINE, CZECH REPUBLIC, POLAND, SPAIN, ITALY, IRELAND, NETHERLANDS, UNITED KINGDOM, GERMANY, RUSSIAN FEDERATION, SOUTH AFRICA, AUSTRIA, FINLAND,BULGARIA,CROATIA, DENMARK, MONACO, NORWAY, PORTUGAL, SWEDEN, SWITZERLAND, ALGERIA, SENEGAL, TUNISIA, TURKEY&quot;, Text ( Country__c )), &quot;EUROPE&quot;,
      IF(CONTAINS(&quot;JAPAN&quot;, Text( Country__c )), &quot;JAPAN&quot;,
        IF(CONTAINS(&quot;CHINA&quot;, Text( Country__c )), &quot;CHINA&quot;,
          IF(CONTAINS(&quot;TAIWAN, INDONESIA, INDIA, AUSTRALIA, MALAYSIA,  THAILAND, PHILIPPINES, MACAU, SINGAPORE, HONG KONG, VIETNAM, CAMBODIA, KOREA, NEW ZEALAND &quot;, Text( Country__c )), &quot;APAC&quot;,
            IF(CONTAINS(&quot;JORDAN, AFGHANISTAN, KUWAIT, QATAR, SAUDI ARABIA, IRAQ, KAZAKHSTAN, LEBANON, UNITED ARAB EMIRATES, IRAN,BAHRAIN,BAHREIN, IRAN, ISLAMIC REPUBLIC OF&quot;, Text( Country__c )), &quot;MIDDLE EAST&quot;,&quot;INTERNATIONAL&quot;
            )
          )
        )
      )
    )
  )
)</formula>
    <label>Zone</label>
    <type>Text</type>
</CustomField>