force-app/main/default/objects/Case/recordTypes/Approval.recordType-meta.xml
<RecordType>
    <fullName>Approval</fullName>
    <active>true</active>
    <businessProcess>Approval</businessProcess>
    <description>Case used for Approbation process</description>
    <label>Approval</label>
</RecordType>