force-app/main/default/objects/Case/recordTypes/Call_Case.recordType-meta.xml
<RecordType>
    <fullName>Call_Case</fullName>
    <active>true</active>
    <businessProcess>Call Support</businessProcess>
    <label>Call Case</label>
</RecordType>