force-app/main/default/objects/Case/recordTypes/Care_Service.recordType-meta.xml
<RecordType>
    <fullName>Care_Service</fullName>
    <active>true</active>
    <businessProcess>Call Support</businessProcess>
    <label>Distant Care Service Email Case</label>
</RecordType>