force-app/main/default/objects/Case/recordTypes/Chat.recordType-meta.xml
<RecordType>
    <fullName>Chat</fullName>
    <active>true</active>
    <businessProcess>Call Support</businessProcess>
    <description>[ICONiCS] Chat Record Type. Used as Picklist values based on the Record Type Webservice are not supported for LiveChatTranscript.</description>
    <label>Chat/Messaging</label>
</RecordType>