force-app/main/default/objects/Case/recordTypes/Clienteling.recordType-meta.xml
<RecordType>
    <fullName>Clienteling</fullName>
    <active>true</active>
    <businessProcess>Clienteling</businessProcess>
    <label>Clienteling</label>
</RecordType>