force-app/main/default/objects/Case/recordTypes/Digital_Private_CA.recordType-meta.xml
<RecordType>
    <fullName>Digital_Private_CA</fullName>
    <active>true</active>
    <businessProcess>Digital Private CA</businessProcess>
    <label>Digital Private CA</label>
</RecordType>