force-app/main/default/objects/Case/recordTypes/InboundCall.recordType-meta.xml
<RecordType>
    <fullName>InboundCall</fullName>
    <active>true</active>
    <businessProcess>Call Support</businessProcess>
    <description>[ICONiCS] Inbound call Record Type. Used as Picklist values based on the Record Type Webservice are not supported for Task or LiveChatTranscript.</description>
    <label>Inbound Call</label>
</RecordType>