force-app/main/default/objects/Case/recordTypes/Operation_Exception.recordType-meta.xml
<RecordType>
    <fullName>Operation_Exception</fullName>
    <active>true</active>
    <businessProcess>Operation Exception</businessProcess>
    <description>Requests management with Back office, Warehouse and Supply Management</description>
    <label>Operation Exception</label>
</RecordType>