force-app/main/default/objects/Case/recordTypes/Product_On_Demand_with_sku.recordType-meta.xml
<RecordType>
    <fullName>Product_On_Demand_with_sku</fullName>
    <active>true</active>
    <businessProcess>Product on Demand With Sku</businessProcess>
    <label>Product On Demand (with SKU)</label>
</RecordType>