force-app/main/default/objects/Case/recordTypes/Product_on_Demand_without_sku.recordType-meta.xml
<RecordType>
    <fullName>Product_on_Demand_without_sku</fullName>
    <active>true</active>
    <businessProcess>Product on Demand Without Sku</businessProcess>
    <label>Product On Demand (no SKU)</label>
</RecordType>