force-app/main/default/objects/Case/recordTypes/Remote_Consent.recordType-meta.xml
<RecordType>
    <fullName>Remote_Consent</fullName>
    <active>true</active>
    <businessProcess>Remote Consent</businessProcess>
    <label>Remote Consent</label>
</RecordType>