force-app/main/default/objects/Case/recordTypes/SPAM.recordType-meta.xml
<RecordType>
    <fullName>SPAM</fullName>
    <active>true</active>
    <businessProcess>Call Support</businessProcess>
    <description>Record type for SPAM requests</description>
    <label>SPAM</label>
</RecordType>