force-app/main/default/objects/Case/recordTypes/Web_Email_Case.recordType-meta.xml
<RecordType>
    <fullName>Web_Email_Case</fullName>
    <active>true</active>
    <businessProcess>Call Support</businessProcess>
    <label>Web&amp;Email Case</label>
</RecordType>