force-app/main/default/objects/Case/validationRules/Case_OperationException_Status.validationRule-meta.xml
<ValidationRule>
    <fullName>Case_OperationException_Status</fullName>
    <active>true</active>
    <description>If Store =&gt; status = &apos;store new&apos; mandatory</description>
    <errorConditionFormula>AND(
NOT( $User.BypassVR__c ),
ISNEW(), 
RecordType.DeveloperName = &apos;Operation_Exception&apos;,
!ISBLANK(Store__c ) &amp;&amp; !ISPICKVAL( Status , &quot;Store New&quot;)
)</errorConditionFormula>
    <errorDisplayField>Status</errorDisplayField>
    <errorMessage>You have to select status &apos;Store New&apos;</errorMessage>
</ValidationRule>