force-app/main/default/objects/Case/validationRules/Case_OperationException_Store.validationRule-meta.xml
<ValidationRule>
    <fullName>Case_OperationException_Store</fullName>
    <active>false</active>
    <description>If status = store new =&gt; Store is mandatory and vice versa</description>
    <errorConditionFormula>AND(
NOT( $User.BypassVR__c ),
NOT(   BEGINS($User.Username, &apos;store_&apos;)) ,
OR(
ISPICKVAL( Status , &quot;Store New&quot;)&amp;&amp; ISBLANK(Store__c ),
ISPICKVAL( Status , &quot;Store New&quot;) &amp;&amp; 
				Store__r.RetailStoreId__c != &apos;USH&apos; 
				&amp;&amp; Store__r.RetailStoreId__c != &apos;UDG&apos;
				&amp;&amp; Store__r.RetailStoreId__c != &apos;U4M&apos;
				&amp;&amp; Store__r.RetailStoreId__c != &apos;U4N&apos;
				&amp;&amp; Store__r.RetailStoreId__c != &apos;UAG&apos;
				&amp;&amp; Store__r.RetailStoreId__c != &apos;UBA&apos;
				&amp;&amp; Store__r.RetailStoreId__c != &apos;UBH&apos;
				&amp;&amp; Store__r.RetailStoreId__c != &apos;UBR&apos;
				&amp;&amp; Store__r.RetailStoreId__c != &apos;UCA&apos;
				&amp;&amp; Store__r.RetailStoreId__c != &apos;UCR&apos;
				&amp;&amp; Store__r.RetailStoreId__c != &apos;UJF&apos;
				&amp;&amp; Store__r.RetailStoreId__c != &apos;ULS&apos;
				&amp;&amp; Store__r.RetailStoreId__c != &apos;UMD&apos;
				&amp;&amp; Store__r.RetailStoreId__c != &apos;UNE&apos;
				&amp;&amp; Store__r.RetailStoreId__c != &apos;UNR&apos;
				&amp;&amp; Store__r.RetailStoreId__c != &apos;UOR&apos;
				&amp;&amp; Store__r.RetailStoreId__c != &apos;UOT&apos;
				&amp;&amp; Store__r.RetailStoreId__c != &apos;USA&apos;
				&amp;&amp; Store__r.RetailStoreId__c != &apos;USB&apos;
				&amp;&amp; Store__r.RetailStoreId__c != &apos;USM&apos;
				&amp;&amp; Store__r.RetailStoreId__c != &apos;UTF&apos;
))</errorConditionFormula>
    <errorDisplayField>Store__c</errorDisplayField>
    <errorMessage>You have to select a Store ‘LV DALLAS GALLERIA’ or ‘LV SHORT HILLS&apos; and Florida’s Stores</errorMessage>
</ValidationRule>