force-app/main/default/objects/Case/validationRules/Case_POD_Distant_Order.validationRule-meta.xml
<ValidationRule>
    <fullName>Case_POD_Distant_Order</fullName>
    <active>true</active>
    <description>A POD with sku can&apos;t be at Follow-up stage and have a Distant Order. Change the stage</description>
    <errorConditionFormula>AND( 
NOT( $User.BypassVR__c ), 
RecordType.DeveloperName = &quot;Product_On_Demand_with_sku&quot;,
NOT(ISBLANK( Transaction_Id__c )),
ISPICKVAL( Status , &quot;Follow-up&quot;)
)</errorConditionFormula>
    <errorMessage>A POD with sku can&apos;t be at Follow-up stage and have a Distant Order. Change the stage before</errorMessage>
</ValidationRule>