force-app/main/default/objects/Case/validationRules/Case_POD_Successful.validationRule-meta.xml
<ValidationRule>
    <fullName>Case_POD_Successful</fullName>
    <active>false</active>
    <description>You have to link a purchase to the POD in order to access the Successful stage</description>
    <errorConditionFormula>AND(
NOT( $User.BypassVR__c ),
ISPICKVAL( Status , &apos;Successful&apos;),
ISBLANK ( PurchasedProduct__c )
)</errorConditionFormula>
    <errorMessage>You have to link a purchase to the POD in order to access the Successful stage</errorMessage>
</ValidationRule>