force-app/main/default/objects/Case/validationRules/Request_to_store.validationRule-meta.xml
<ValidationRule>
    <fullName>Request_to_store</fullName>
    <active>true</active>
    <description>If the resolution &apos;Request to store&apos; is selected, Client and Store are mandatory</description>
    <errorConditionFormula>AND( 
NOT( $User.BypassVR__c ), 
ISPICKVAL( Resolution__c , &quot;Request to Store&quot;), 
OR(ISBLANK( Store__c ), 
ISBLANK ( AccountId ) 
) 
)</errorConditionFormula>
    <errorMessage>If the resolution &apos;Request to store&apos; is selected, Client and Store are mandatory</errorMessage>
</ValidationRule>