force-app/main/default/objects/Case/validationRules/Request_to_store_subject_mandatory.validationRule-meta.xml
<ValidationRule>
    <fullName>Request_to_store_subject_mandatory</fullName>
    <active>false</active>
    <description>If the resolution &apos;Request to store&apos; is selected, Subject field is mandatory</description>
    <errorConditionFormula>AND(
NOT( $User.BypassVR__c ), 
ISPICKVAL( Resolution__c , &quot;Request to Store&quot;), 
ISBLANK(Subject)
)</errorConditionFormula>
    <errorDisplayField>Subject</errorDisplayField>
    <errorMessage>If the resolution &apos;Request to store&apos; is selected, Subject field is mandatory</errorMessage>
</ValidationRule>