force-app/main/default/objects/Case/validationRules/Status_Approval_Update.validationRule-meta.xml
<ValidationRule>
    <fullName>Status_Approval_Update</fullName>
    <active>true</active>
    <description>if user is not a manager, he cannot update a status of approval case</description>
    <errorConditionFormula>AND(NOT($User.BypassVR__c),NOT(CONTAINS( $UserRole.Name, &apos;Manager&apos;)),NOT(CONTAINS( $Profile.Name,&apos;Admin&apos;)),NOT(CONTAINS($Profile.Name,&apos;ICONiCS_Back_Office&apos;)), NOT(CONTAINS( $Profile.Name,&apos;ICONiCS_SA_Manager&apos;)),RecordType.DeveloperName=&quot;Approval&quot;, ISCHANGED(Status))</errorConditionFormula>
    <errorDisplayField>Status</errorDisplayField>
    <errorMessage>Only a Manager can update the status of an Approval Case</errorMessage>
</ValidationRule>