force-app/main/default/objects/Case/validationRules/VR10_CASE_CA_Store.validationRule-meta.xml
<ValidationRule>
    <fullName>VR10_CASE_CA_Store</fullName>
    <active>true</active>
    <description>The CA Name selected should be coherent with the store selected on the request except if the case is closed, or running user has an admin profil or Datastage profil.</description>
    <errorConditionFormula>AND(
NOT( $User.BypassVR__c),
NOT($Profile.Name = &apos;System Administrator&apos;),
NOT($Profile.Name = &apos;LV_Interface_Datastage&apos;),
NOT( ISBLANK(CA_store__c)) ,
Store__r.RetailStoreId__c != CA_store__c
)</errorConditionFormula>
    <errorDisplayField>CA_Name__c</errorDisplayField>
    <errorMessage>The CA is not associated to the store selected</errorMessage>
</ValidationRule>