force-app/main/default/objects/Case/validationRules/VR11_CASE_ClosedInStoreStatus.validationRule-meta.xml
<ValidationRule>
    <fullName>VR11_CASE_ClosedInStoreStatus</fullName>
    <active>true</active>
    <description>When the In Store Status is closed, you can&apos;t modify it anymore</description>
    <errorConditionFormula>AND(
NOT( $User.BypassVR__c ),
ISPICKVAL ( PRIORVALUE(In_Store_Status__c) , &quot;Closed&quot;) ,
OR(
ISPICKVAL( In_Store_Status__c , &quot;Pending&quot;),
ISPICKVAL( In_Store_Status__c , &quot;New&quot;)
)
)</errorConditionFormula>
    <errorDisplayField>In_Store_Status__c</errorDisplayField>
    <errorMessage>The In Store Status is closed, you can&apos;t modify it anymore</errorMessage>
</ValidationRule>