force-app/main/default/objects/Case/validationRules/VR12_OperationException_Store.validationRule-meta.xml
<ValidationRule>
    <fullName>VR12_OperationException_Store</fullName>
    <active>true</active>
    <description>When Store New/Store Pending Statuses in OE request, CA has to filled field Store</description>
    <errorConditionFormula>AND(RecordType.DeveloperName = &apos;Operation_Exception&apos;,
NOT( $User.BypassVR__c ),
OR(ISPICKVAL(Status, &apos;Store New&apos;),
   ISPICKVAL(Status, &apos;Store Pending&apos;)),
OR(ISBLANK(Store__c),
   ISNULL(Store__c))
 )</errorConditionFormula>
    <errorMessage>Please complete the Store field!</errorMessage>
</ValidationRule>