force-app/main/default/objects/Case/validationRules/VR1_CASE_Cancellation_Reason.validationRule-meta.xml
<ValidationRule>
    <fullName>VR1_CASE_Cancellation_Reason</fullName>
    <active>true</active>
    <description>The reason of cancellation is mandatory when the status is &apos;Cancelled&apos;</description>
    <errorConditionFormula>AND(
NOT( $User.BypassVR__c),
ISPICKVAL (Status ,&quot;Cancelled&quot;),
ISPICKVAL(Reason_of_cancellation__c, &quot;&quot;),
RecordType.DeveloperName = &quot;Product_On_Demand_with_sku&quot;)</errorConditionFormula>
    <errorDisplayField>Reason_of_cancellation__c</errorDisplayField>
    <errorMessage>Please select a reason of cancellation</errorMessage>
</ValidationRule>