force-app/main/default/objects/Case/validationRules/VR2_Case_Product_information.validationRule-meta.xml
<ValidationRule>
    <fullName>VR2_Case_Product_information</fullName>
    <active>true</active>
    <description>One of the fields : Product sku or Product sku unknown is mandatory if the type of the case = Product information or category = repair and car advice or Personalization</description>
    <errorConditionFormula>AND( 
(ISBLANK( Product_Sku_unknown__c )),
(ISBLANK ( Product_Sku__c )),
 NOT($User.BypassVR__c),
 OR(
    ISPICKVAL ( Category__c , &quot;Availability&quot;),
    ISPICKVAL( Category__c , &quot;Price&quot;),
    ISPICKVAL ( Category__c , &quot;Characteristics&quot;),
    ISPICKVAL ( Category__c , &quot;Reservation&quot;)),
 NOT(ISPICKVAL( Resolution__c , &quot;&quot;)),
 NOT ( Spam__c )
 )</errorConditionFormula>
    <errorDisplayField>Product_Sku__c</errorDisplayField>
    <errorMessage>Note: Please complete mandatory fields: Product sku or Unknown product designation</errorMessage>
</ValidationRule>