force-app/main/default/objects/Case/validationRules/VR6_CASE_ChangeOwnerMandatory.validationRule-meta.xml
<ValidationRule>
    <fullName>VR6_CASE_ChangeOwnerMandatory</fullName>
    <active>true</active>
    <description>You have to change the ownership to yourself before closing or transferring the request to a store.</description>
    <errorConditionFormula>AND( 
NOT($User.BypassVR__c ), 
NOT (Owner:Queue.DeveloperName = &quot;SPAM&quot;), 
OR( 
ISPICKVAL( Resolution__c , &quot;Immediate Response&quot;), 
ISPICKVAL( Resolution__c , &quot;Request to Store&quot;),
ISPICKVAL( Resolution__c , &quot;Reply Made&quot;), 
ISPICKVAL( Resolution__c , &quot;Transfer&quot;), 
ISPICKVAL( Resolution__c , &quot;Sent Catalogue_Brochure_TYC_Invitation&quot;), 
ISPICKVAL( Resolution__c , &quot;No Response Required&quot;) 
), 
BEGINS(OwnerId, &quot;00G&quot;) 
)</errorConditionFormula>
    <errorMessage>You have to change the ownership to yourself before closing or transferring the request to the store.</errorMessage>
</ValidationRule>