force-app/main/default/objects/Case/validationRules/VR7_CASE_Country_Mandatory_for_MyCR.validationRule-meta.xml
<ValidationRule>
    <fullName>VR7_CASE_Country_Mandatory_for_MyCR</fullName>
    <active>false</active>
    <description>Country is mandatory for MyCR</description>
    <errorConditionFormula>AND( 
NOT( $User.BypassVR__c ), 
ISPICKVAL( Resolution__c , &quot;Request to Store&quot;), 
ISPICKVAL( Country__c, &quot;&quot; ))</errorConditionFormula>
    <errorMessage>Please add &quot;Country&quot; before sending MyCR</errorMessage>
</ValidationRule>