force-app/main/default/objects/Case/listViews/All_Approval.listView-meta.xml
<ListView>
    <fullName>All_Approval</fullName>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>NAME</columns>
    <columns>CASES.SUBJECT</columns>
    <columns>Order__c</columns>
    <columns>Order_Shipping__c</columns>
    <columns>CASES.STATUS</columns>
    <columns>CASES.PRIORITY</columns>
    <columns>CASES.CREATED_DATE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CASES.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Case.Approval</value>
    </filters>
    <label>All Approval</label>
    <sharedTo>
        <group>ICX_TWIST_UATGroup</group>
    </sharedTo>
</ListView>