force-app/main/default/objects/Case/listViews/All_Requests_Reassigned_to_CSC.listView-meta.xml
<ListView>
    <fullName>All_Requests_Reassigned_to_CSC</fullName>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>NAME</columns>
    <columns>CASES.SUBJECT</columns>
    <columns>CASES.STATUS</columns>
    <columns>CASES.PRIORITY</columns>
    <columns>CASES.CREATED_DATE</columns>
    <columns>OWNER_NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Resolution__c</field>
        <operation>equals</operation>
        <value>Reply to be made by CSC</value>
    </filters>
    <filters>
        <field>Country__c</field>
        <operation>equals</operation>
        <value>USA</value>
    </filters>
    <filters>
        <field>CASES.CREATED_DATE</field>
        <operation>greaterOrEqual</operation>
        <value>1/1/2023 12:00 AM</value>
    </filters>
    <label>All Requests Reassigned to CSC-US</label>
    <sharedTo>
        <role>AME_CSC_US_CA_Manager</role>
        <roleAndSubordinatesInternal>CSC_DIRECTOR_US_CA</roleAndSubordinatesInternal>
    </sharedTo>
</ListView>