force-app/main/default/objects/Case/listViews/APAC_E_commerce_Case.listView-meta.xml
<ListView>
    <fullName>APAC_E_commerce_Case</fullName>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>NAME</columns>
    <columns>CASES.SUBJECT</columns>
    <columns>CASES.STATUS</columns>
    <columns>CASES.PRIORITY</columns>
    <columns>CASES.CREATED_DATE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>UPDATEDBY_USER.ALIAS</columns>
    <filterScope>Queue</filterScope>
    <label>APAC E-commerce</label>
    <queue>APAC_E_commerce</queue>
    <sharedTo>
        <group>APAC_E_commerce</group>
    </sharedTo>
</ListView>